# nymCHAT

./: .env.example  .gitignore  Cargo.toml  Dockerfile  NymCHATUserDiscoveryProtocol.md  NymRustSDK.md  Protocol.md  README.md  docker-compose.yml  mixnetMessages.py  nymDirectory.py
client/: Dockerfile  README.md  build.sh  requirements.txt
client/src/: connectionUtils.py  messageHandler.py  redisUtils.py  runClient.py
client/tui/: Cargo.toml
client/tui/src/: app.rs  main.rs
client/tui/src/core/: crypto.rs  db.rs  message_handler.rs  messages.rs  mixnet_client.rs
client/tui/src/event/: mod.rs
client/tui/src/model/: contact.rs  message.rs  mod.rs  user.rs
client/tui/src/screen/: chat.rs  mod.rs
client/tui/src/ui/: layout.rs  mod.rs
client/tui/src/ui/components/: chat.rs  footer.rs  mod.rs
client/tui/src/ui/widgets/: splash.rs
docs/: Build.md  Protocol.md
nym-client/: Dockerfile.nym-client
rust/surbfurb/src/: main.rs
scripts/: entrypoint.sh  install.sh  nym_client.sh
server/: .env.example  Dockerfile  README.md  clientMonitor.py  cryptographyUtils.py  dbUtils.py  logConfig.py  mainApp.py  messageUtils.py  requirements.txt  websocketUtils.py
server/docs/: Overview.md  Protocol.md
server/rust/surbfurb/: Cargo.toml
server/scripts/: entrypoint.sh  init.sh  install.sh
server/src/: cryptographyUtils.py  dbUtils.py  envLoader.py  logConfig.py  mainApp.py  messageUtils.py  redisUtils.py  websocketUtils.py
src/: app.rs
src/core/: crypto.rs  db.rs  message_handler.rs  mixnet_client.rs
src/event/: mod.rs
src/ui/components/: chat.rs
