[package]
name = "nymstr"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
color-eyre = "0.6"

# core dependencies for mixnet client
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
once_cell = "1.17"
base64 = "0.21"
# Crypto utilities: only use ring, pem, base64, and hex
# Crypto utilities: only use openssl, base64, and hex
hex = "0.4"
openssl = "0.10"
# removed p256; simple_asn1, hkdf, aes-gcm, rand_core replaced by ring+pem+hex
#[removed] simple_asn1 = "0.6"
#[removed] hkdf = "0.12"
#[removed] aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15"
 fastrand = "1.9"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio", "chrono"] }
# removed tachyonfx
#[removed] rand_core = "0.6"
#[removed] ring = "0.16"
