[package]
name = "surbfurb"
version = "0.1.0"
edition = "2024"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched" }
nym-sphinx = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-sphinx" }
nym-topology = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-topology" }
nym-sphinx-types = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-sphinx-types" }
nym-crypto = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-crypto" }
nym-sphinx-params = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-sphinx-params" }
nym-sphinx-addressing = { git = "https://github.com/nymtech/nym.git", branch = "release/2025.4-dorina-patched", package = "nym-sphinx-addressing" }
nym-client-core = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-client-core" }
nym-sphinx-anonymous-replies = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched", package = "nym-sphinx-anonymous-replies" }
nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "release/2025.4-dorina-patched" }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

